tests/paczka1/small_fuzzy/63568855.err
Error in line 2: eOAkVz A375 10,1
Error in line 10: DHw S795 36,6
